Added window-within-window for grid

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,8 +1,9 @@
 CC=gcc
-LIBS=-lncurses
+LIBS=-lncurses -pthread
+CFLAGS=-Wall -Wextra -std=c11 -pedantic -ggdb
 
 printscreen: printscreen.o
-	${CC} -o $@ $< ${LIBS}
+	${CC} -o $@ $< ${LIBS} ${CFLAGS}
 
 printscreen.o: printscreen.c
 	${CC} -o $@ -c $<
